# classic2gameport

./: .gitignore  README.md
firmware/: build_firmware.sh  flash_firmware.sh  flash_fuses.sh
firmware/Classic2Gameport/: .cproject  .mxproject  .project  Classic2Gameport Debug.launch  Classic2Gameport Release.launch  Classic2Gameport.ioc  STM32G071KBTX_FLASH.ld
firmware/Classic2Gameport/Core/Inc/: stm32g0xx_hal_conf.h
firmware/Classic2Gameport/Core/Src/: button_mapper.c  button_mapper.h  classic_controller.c  classic_controller.h  gameport.c  gameport.h  main.c  my_debug.c  my_debug.h  stm32f0xx_hal_msp.c  stm32g0xx_hal_msp.c
firmware/build_docker/: Dockerfile
firmware/hex/: classic2gameport.hex
firmware/src/: CMakeLists.txt  blink.c  main.c  twi_func.h
pcb/: classic2gameport.kicad_pcb  classic2gameport.pro  classic2gameport.sch  classic2gameport_bom.ods  fp-lib-table  parts.ods  stm32_xxx.lib  sym-lib-table
pcb/classic2gameport.pretty/: G026.kicad_mod
